# esp-hmi

./: .gitignore  .gitmodules  README.md  sessions.sh  start.sh
.github/workflows/: main.yml
projects/: hmi.sh  hmi_sim.sh
projects/clock/: clock.guiguider
projects/clock/lvgl-simulator/: lv_conf.h
projects/clock/temp/: board.h  conf.json
projects/hmi/: Makefile  flash.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
projects/hmi/components/lcm/: CMakeLists.txt  st7796_rgb.c
projects/hmi/components/lcm/include/: st7796_rgb.h
projects/hmi/components/lvgl/: CMakeLists.txt  component.mk  lv_conf.h  lv_ex_conf.h
projects/hmi/lua/: main.lua  wifi.lua
projects/hmi/main/: CMakeLists.txt  main.lua
projects/hmi/main/esp32/: main.c
projects/hmi/main/esp32c3/: main.c
projects/hmi/main/esp32c3/include/: config.h
projects/hmi/main/esp32s2/: main.c
projects/hmi/main/esp32s3/: main.c
projects/hmi/main/esp32s3/include/: config.h
projects/hmi/main/gui/: esp_icon.c  gui.c  gui.h
projects/hmi_sim/: CMakeLists.txt  main.c
projects/lcd_cam_loopback/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s2
projects/lcd_cam_loopback/components/jpeg/: jpeg.c
projects/lcd_cam_loopback/components/lcm/: st7796.c
projects/lcd_cam_loopback/main/: CMakeLists.txt
projects/lcd_cam_loopback/main/esp32/: main.c
projects/lcd_cam_loopback/main/esp32/include/: config.h
projects/lcd_cam_loopback/main/esp32c3/: main.c
projects/lcd_cam_loopback/main/esp32s2/: main.c
projects/lcd_cam_loopback/main/esp32s2/include/: config.h
projects/lcd_cam_loopback/main/esp32s3/: main.c
projects/lcd_cam_loopback/main/esp32s3/include/: config.h
projects/rgb/: CMakeLists.txt  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
projects/rgb/components/jpeg/include/: jpeg.h
projects/rgb/components/lcm/: st7796.c  st7796_rgb.c
projects/rgb/components/lcm/include/: st7796.h  st7796_rgb.h
projects/rgb/components/lvgl/: lv_conf.h  lv_ex_conf.h
projects/rgb/components/sensors/: sccb.c
projects/rgb/components/touch/: CMakeLists.txt  gt1151.c
projects/rgb/components/touch/include/: gt1151.h
projects/rgb/main/esp32c3/: main.c
projects/rgb/main/esp32s3/: main.c
projects/rgb/main/esp32s3/include/: config.h
projects/rgb/main/gui/: gui.c  gui.h
tools/: tools.sh
